k8s-fundamentals/practicing_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kapp-svc
spec:
  selector:
    app: kapp
  ports:
    - port: 3000
      targetPort: 9376
